[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sobermind"
version = "1.0.0"
description = "SoberMind CLI Autopilot Interrupter"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
sobermind = "sobermind:main"

[tool.setuptools]
py-modules = ["sobermind"]
